peg_parser/parser.js
var parser = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { text: peg$parsetext },
        peg$startRuleFunction  = peg$parsetext,

        peg$c0 = function(expr) {return _node("text", expr);},
        peg$c1 = function(expr) {return _node("discourse", expr);},
        peg$c2 = function(expr) {return _node("sentence", expr);},
        peg$c3 = function(expr) {return _node("root_verb_phrase", expr);},
        peg$c4 = function(expr) {return _node("sub_verb_phrase", expr);},
        peg$c5 = function(expr) {return _node("root_verb_cluster", expr);},
        peg$c6 = function(expr) {return _node("sub_verb_cluster", expr);},
        peg$c7 = function(expr) {return _node("root_verb", expr);},
        peg$c8 = function(expr) {return _node("root_verbal_clause", expr);},
        peg$c9 = function(expr) {return _node("dp", expr);},
        peg$c10 = function(expr) {return _node("noun_phrase", expr);},
        peg$c11 = function(expr) {return _node("noun", expr);},
        peg$c12 = function(expr) {return _node("noun_clause", expr);},
        peg$c13 = function(expr) {return _node("serial_phrase", expr);},
        peg$c14 = function(expr) {return _node("serial_word", expr);},
        peg$c15 = function(expr) {return _node("freemod", expr);},
        peg$c16 = function(expr) {return _node("vocative_phrase", expr);},
        peg$c17 = function(expr) {return _node("interjection", expr);},
        peg$c18 = function(expr) {return _node("word", expr);},
        peg$c19 = function(expr) {return _node("vocative", expr);},
        peg$c20 = function(expr) {return _node("determiner", expr);},
        peg$c21 = function(expr) {return _node("subordinator", expr);},
        peg$c22 = function(expr) {return _node("clause_terminator", expr);},
        peg$c23 = function(expr) {return _node("illocutionary_desinence", expr);},
        peg$c24 = function(expr) {return (expr === "" || !expr) ? ["noun_desinence", "∅"] : _node_empty("noun_desinence", expr);},
        peg$c25 = function(expr) {return _node("stem", expr);},
        peg$c26 = function(expr) {return _node("desinence", expr);},
        peg$c27 = function(expr) {return _node("syllable", expr);},
        peg$c28 = function(expr) {return _node("consonant", expr);},
        peg$c29 = function(expr) {return _node("vowel", expr);},
        peg$c30 = /^[aA]/,
        peg$c31 = peg$classExpectation(["a", "A"], false, false),
        peg$c32 = function(expr) {return ["a", _join(expr)];},
        peg$c33 = /^[eE]/,
        peg$c34 = peg$classExpectation(["e", "E"], false, false),
        peg$c35 = function(expr) {return ["e", _join(expr)];},
        peg$c36 = /^[\u0131iI]/,
        peg$c37 = peg$classExpectation(["\u0131", "i", "I"], false, false),
        peg$c38 = function(expr) {return ["i", _join(expr)];},
        peg$c39 = /^[oO]/,
        peg$c40 = peg$classExpectation(["o", "O"], false, false),
        peg$c41 = function(expr) {return ["o", _join(expr)];},
        peg$c42 = /^[uU]/,
        peg$c43 = peg$classExpectation(["u", "U"], false, false),
        peg$c44 = function(expr) {return ["u", _join(expr)];},
        peg$c45 = /^[yY]/,
        peg$c46 = peg$classExpectation(["y", "Y"], false, false),
        peg$c47 = function(expr) {return ["y", _join(expr)];},
        peg$c48 = /^[wW]/,
        peg$c49 = peg$classExpectation(["w", "W"], false, false),
        peg$c50 = function(expr) {return ["w", _join(expr)];},
        peg$c51 = /^[rR]/,
        peg$c52 = peg$classExpectation(["r", "R"], false, false),
        peg$c53 = function(expr) {return ["r", _join(expr)];},
        peg$c54 = /^[lL]/,
        peg$c55 = peg$classExpectation(["l", "L"], false, false),
        peg$c56 = function(expr) {return ["l", _join(expr)];},
        peg$c57 = /^[mM]/,
        peg$c58 = peg$classExpectation(["m", "M"], false, false),
        peg$c59 = function(expr) {return ["m", _join(expr)];},
        peg$c60 = /^[nN]/,
        peg$c61 = peg$classExpectation(["n", "N"], false, false),
        peg$c62 = function(expr) {return ["n", _join(expr)];},
        peg$c63 = /^[\u014B\u014A]/,
        peg$c64 = peg$classExpectation(["\u014B", "\u014A"], false, false),
        peg$c65 = function(expr) {return ["ng", _join(expr)];},
        peg$c66 = /^[bB]/,
        peg$c67 = peg$classExpectation(["b", "B"], false, false),
        peg$c68 = function(expr) {return ["b", _join(expr)];},
        peg$c69 = /^[dD]/,
        peg$c70 = peg$classExpectation(["d", "D"], false, false),
        peg$c71 = function(expr) {return ["d", _join(expr)];},
        peg$c72 = /^[jJ]/,
        peg$c73 = peg$classExpectation(["j", "J"], false, false),
        peg$c74 = function(expr) {return ["j", _join(expr)];},
        peg$c75 = /^[gG]/,
        peg$c76 = peg$classExpectation(["g", "G"], false, false),
        peg$c77 = function(expr) {return ["g", _join(expr)];},
        peg$c78 = /^[pP]/,
        peg$c79 = peg$classExpectation(["p", "P"], false, false),
        peg$c80 = function(expr) {return ["p", _join(expr)];},
        peg$c81 = /^[tT]/,
        peg$c82 = peg$classExpectation(["t", "T"], false, false),
        peg$c83 = function(expr) {return ["t", _join(expr)];},
        peg$c84 = /^[\u010D\u010C]/,
        peg$c85 = peg$classExpectation(["\u010D", "\u010C"], false, false),
        peg$c86 = function(expr) {return ["ch", _join(expr)];},
        peg$c87 = /^[kK]/,
        peg$c88 = peg$classExpectation(["k", "K"], false, false),
        peg$c89 = function(expr) {return ["k", _join(expr)];},
        peg$c90 = /^[qQ]/,
        peg$c91 = peg$classExpectation(["q", "Q"], false, false),
        peg$c92 = function(expr) {return ["q", _join(expr)];},
        peg$c93 = /^[\u02BC]/,
        peg$c94 = peg$classExpectation(["\u02BC"], false, false),
        peg$c95 = function(expr) {return ["gs", _join(expr)];},
        peg$c96 = /^[fF]/,
        peg$c97 = peg$classExpectation(["f", "F"], false, false),
        peg$c98 = function(expr) {return ["f", _join(expr)];},
        peg$c99 = /^[sS]/,
        peg$c100 = peg$classExpectation(["s", "S"], false, false),
        peg$c101 = function(expr) {return ["s", _join(expr)];},
        peg$c102 = /^[hH]/,
        peg$c103 = peg$classExpectation(["h", "H"], false, false),
        peg$c104 = function(expr) {return ["h", _join(expr)];},
        peg$c105 = /^[0123456789]/,
        peg$c106 = peg$classExpectation(["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"], false, false),
        peg$c107 = function(expr) {return _node("digit", expr);},
        peg$c108 = function(expr) {return _node("post_word", expr);},
        peg$c109 = function(expr) {return _node("pause", expr);},
        peg$c110 = peg$anyExpectation(),
        peg$c111 = function(expr) {return _node("EOF", expr);},
        peg$c112 = function(expr) {return _join(expr);},
        peg$c113 = /^[.\t\n\r?! ]/,
        peg$c114 = peg$classExpectation([".", "\t", "\n", "\r", "?", "!", " "], false, false),
        peg$c115 = function(expr) {return _node("space_char", expr);},
        peg$c116 = function(expr) {return _node("space", expr);},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsetext() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 62 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsespace();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsediscourse();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseEOF();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsediscourse() {
      var s0, s1, s2;

      var key    = peg$currPos * 62 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsesentence();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsesentence();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsesentence() {
      var s0, s1;

      var key    = peg$currPos * 62 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseroot_verb_phrase();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseroot_verb_phrase() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 62 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseroot_verb_cluster();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsedp();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsedp();
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsesub_verb_phrase() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 62 + 4,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsesub_verb_cluster();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsedp();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsedp();
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseroot_verb_cluster() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 62 + 5,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseroot_verb();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseserial_phrase();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsesub_verb_cluster() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 62 + 6,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsestem();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseserial_phrase();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseroot_verb() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 62 + 7,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsestem();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseillocutionary_desinence();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsespace();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parsefreemod();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parsefreemod();
            }
            if (s5 !== peg$FAILED) {
              s2 = [s2, s3, s4, s5];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c7(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseroot_verbal_clause() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      var key    = peg$currPos * 62 + 8,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsesubordinator();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseillocutionary_desinence();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesub_verb_phrase();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseclause_terminator();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsespace();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parsefreemod();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parsefreemod();
                }
                if (s7 !== peg$FAILED) {
                  s2 = [s2, s3, s4, s5, s6, s7];
                  s1 = s2;
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsedp() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 62 + 9,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsedeterminer();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenoun_phrase();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsenoun_phrase() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 62 + 10,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsenoun();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseserial_phrase();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsenoun() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 62 + 11,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsestem();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenoun_desinence();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsespace();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parsefreemod();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parsefreemod();
            }
            if (s5 !== peg$FAILED) {
              s2 = [s2, s3, s4, s5];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c11(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsenoun_clause() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      var key    = peg$currPos * 62 + 12,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsesubordinator();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenoun_desinence();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesub_verb_phrase();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseclause_terminator();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsespace();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parsefreemod();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parsefreemod();
                }
                if (s7 !== peg$FAILED) {
                  s2 = [s2, s3, s4, s5, s6, s7];
                  s1 = s2;
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c12(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseserial_phrase() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 62 + 13,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseserial_word();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseserial_word();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c13(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseserial_word() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 62 + 14,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsestem();
      if (s2 !== peg$FAILED) {
        s3 = peg$parset();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsespace();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parsefreemod();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parsefreemod();
            }
            if (s5 !== peg$FAILED) {
              s2 = [s2, s3, s4, s5];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c14(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsefreemod() {
      var s0, s1;

      var key    = peg$currPos * 62 + 15,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
